@@ -54,3 +54,5 @@ v 1.5:
 	- Better commenting in config.yml
 	- Fixed GM to recognize Superperm child nodes.
 	  If you add a node like Towny.admin GM will now correctly report on all child nodes.
+	- Fixed GM loading world data files twice at startup.
+	- Improved error reporting for invalid groups.yml
